--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
-<html>
-<head>    ALEKSANDER DOBEK  
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl-pl" lang="pl-pl" dir="ltr" >
+<head> 
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="robots" content="index, follow" />
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+ <title>Resume</title>     
 </head>
-<body>                                                                                                                                                                                                                  
-<h3>Adres: ul.Królewska 20, 32-087 Bibice</h3>                                                                                                                 
-<h3>Tel.: 696411097</h3>                                                                                                                                                  
-<h3>E-mail: alek.dobek@gmail.com</h3>
+<body>  
+<h1>ALEKSANDER DOBEK</h1>                                                                                                                                                                                                                
+<h4>Adres: ul.Królewska 20, 32-087 Bibice</h4>                                                                                                                 
+<h4>Tel.: 696411097</h4>                                                                                                                                                  
+<h4>E-mail: alek.dobek@gmail.com</h4>
 
-<h2>Doświadczenie</h2>
-01.2018 – obecnie	Test Specialist – Alior Bank S. A.
-•	Tworzenie scenariuszy i przypadków  testowych
-•	Wykonywanie testów manualnych aplikacji webowych
-•	Raportowanie znalezionych błędów i współpraca z programistami i analitykami
+<h3>Doświadczenie</h3>
+<h4>01.2018 – obecnie	Test Specialist – Alior Bank S. A.</h4>
+<ul>Tworzenie scenariuszy i przypadków  testowych</ul>
+<ul>Wykonywanie testów manualnych aplikacji webowych</ul> 
+<ul>Raportowanie znalezionych błędów i współpraca z programistami i analitykami</ul>
 
-09 - 11.2017 		Praktyki w Testuj.pl
-●	Pisanie przypadków testowych,
-●	Testowanie i raportowanie błędów,
-●	Pisanie Test planu,
-●	Testowanie i zgłaszanie incydentów w projekcie dla klienta.
+<h4>09 - 11.2017 		Praktyki w Testuj.pl</h4>
+<ul>Pisanie przypadków testowych</ul>
+<ul>Testowanie i raportowanie błędów</ul>
+<ul>Pisanie Test planu</ul>
+<ul>Testowanie i zgłaszanie incydentów w projekcie dla klienta</ul>
 
-2014 - 2016 		Infolinia bankowa
-●	Lider zespołu
-●	Telefoniczny doradca klienta
-Wykształcenie
-2014-2017 	Tytuł licencjata, kierunek europeistyka, specjalizacja biznes międzynarodowy, Uniwersytet Ekonomicznym w Krakowie
-2010-2014 	Klasa o profilu technik Teleinformatyk, Zespół Szkół Łączności im. Obrońców Poczty Polskiej w Gdańsku
-Szkolenia i certyfikaty
-	Certyfikat  „ISTQB Foundation Level”
-	Certyfikat „Design Thinking”
-	Szkolenie z tworzenia zapytań do bazy danych na platformie MS SQL Server
-Umiejętności 
-●	SQL - podstawy
-●	TestLiink
-●	SoapUI
-●	Oracle SQL Developer
-●	XML
-●	Metodologia Scrum
-●	Jira
-●	Mantis
-●	Confluence 
-Język obcy
+<h4>2014 - 2016 		Infolinia bankowa</h4>
+<ul>Lider zespołu</ul>
+<ul>Telefoniczny doradca klienta</ul>
+<h3>Wykształcenie</h3> 
+<ul>2014-2017 	Tytuł licencjata, kierunek europeistyka, specjalizacja biznes międzynarodowy, Uniwersytet Ekonomicznym w Krakowie</ul>
+<ul>2010-2014 	Klasa o profilu technik Teleinformatyk, Zespół Szkół Łączności im. Obrońców Poczty Polskiej w Gdańsku</ul>
+<h3>Szkolenia i certyfikaty</h3>
+<ul>	Certyfikat  „ISTQB Foundation Level”</ul>
+<ul>Certyfikat „Design Thinking”</ul>
+<ul>Szkolenie z tworzenia zapytań do bazy danych na platformie MS SQL Server</ul>
+<h3>Umiejętności </h3> 
+<li>SQL - podstawy</li>	
+<li>TestLiink</li>
+<li>SoapUI</li>	
+<li>Oracle SQL Developer</li>	
+<li>XML</li>
+<li>Metodologia Scrum</li>
+<li>Jira</li>	
+<li>Mantis</li>	
+<h3>Język obcy</h3> 
  
 •	angielski B2  
 •	niemiecki, hiszpański A1 
 
-Zainteresowania: 
-Podróże, motoryzacja, muzyka i gra na gitarze                                                                                                     
-Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dn. 29.08.97 o Ochronie danych Osobowych Dz. U. nr 133 poz.883 z póżn. zm.).   
+<h3>Zainteresowania</h3> 
+Podróże, motoryzacja, muzyka i gra na gitarze 
+<br>                                                                                                    
+<br>Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dn. 29.08.97 o Ochronie danych Osobowych Dz. U. nr 133 poz.883 z póżn. zm.).   
 </body> 
 </html>
