--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <li>Mantis</li>	
 <h3>Język obcy</h3> 
  
-•	angielski B2  
-•	niemiecki, hiszpański A1 
+<li> angielski B2</li>  
+<li> niemiecki, hiszpański A1</li> 
 
 <h3>Zainteresowania</h3> 
 Podróże, motoryzacja, muzyka i gra na gitarze 
